# OptimTrajectoire

./: .gitignore  flight_data.csv  main.py
.github/workflows/: documentation.yml
OptimTrajectoire-package/: LICENSE.md  README.md  requirements.txt  setup.cfg
OptimTrajectoire-package/Cas Test/: README.md  map.html
OptimTrajectoire-package/OptimTrajectoire/: __init__.py  aircraft.py  interface.py  loader.py  main.py  modeler.py  optimizer.py  visualizer.py
OptimTrajectoire-package/source/: OptimTrajectoire.aircraft.rst  OptimTrajectoire.interface.rst  OptimTrajectoire.loader.rst  OptimTrajectoire.main.rst  OptimTrajectoire.modeler.rst  OptimTrajectoire.optimizer.rst  OptimTrajectoire.rst  OptimTrajectoire.visualizer.rst  conf.py  index.rst  modules.rst
