[metadata]
name = OptimTrajectoire
version = 1.0
author = Victor Garcia
description = Module réalisé dans le cadre du projet de fin de session de MGA802
long_description = Module de calcul de trajectoire entre deux aeroports en considerant les haltes potentielles et les modeles.
url =
keywords = module,projet,trajectoire

[options]
packages = find:
python_requires = >=3.12
install_requires =
    networkx
    folium
    pandas
include_package_data = true

[options.package_data]
OptimTrajectoire = data/*.csv
